<resources>
    <string name="app_name">JobMatch</string>
    <string name="job_match_logo">Job Match Logo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nama">Nama</string>
    <string name="phone">Phone</string>
    <string name="fake_username">Hotman Fatna Oslo</string>
    <string name="fake_phone">088244118892</string>
    <string name="fake_email">Hotman@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="joma">Joma</string>
    <string name="history">History</string>
    <string name="about">About Us</string>
    <string name="input">Input</string>
    <string name="fake_input_data">Android Developer,cloud engineer,frontend developer,backend developer,fullstack developer,devops engineer,ios developer,android</string>
    <string name="fake_date">14 November 2022 || 18:00</string>
    <string name="select_skills">Select Skills</string>
    <string name="dropdown">dropdown</string>
    <string name="masa_pengalaman_kerja">Masa Pengalaman Kerja</string>
    <string name="submit">Submit</string>
    <string name="jurusan">Jurusan</string>
    <string name="input_data">Input Data</string>
    <string name="program_studi">Program Studi</string>
    <string name="skills">Skills</string>
    <string name="find_at">Find At</string>
    <string name="result">Result</string>

    <string-array name="jurusan">
        <item>Science &amp; Technology</item>
        <item>Communication &amp; Management</item>
        <item>Others</item>
    </string-array>
</resources>