<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/dark_orange"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/input_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_input_data"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_date"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.cardview.widget.CardView>